rules page update

--- a/home/templates/home/rules.html
+++ b/home/templates/home/rules.html
@@ -5,7 +5,7 @@
 
 <h1 class="lowerer">Official Rules</h1>
 <p>
-Welcome to the ninth annual Montgomery Blair Math Tournament, or MBMT for short! MBMT is a free middle school math contest that seeks to inspire students' interest in mathematics and to encourage them to explore math beyond the school curriculum. Contest details can be found on the <a href="{% url "home:info" %}">information page</a>.
+Welcome to the tenth annual Montgomery Blair Math Tournament, or MBMT X for short! MBMT is a free middle school math contest that seeks to inspire students' interest in mathematics and to encourage them to explore math beyond the school curriculum. Contest details can be found on the <a href="{% url "home:info" %}">information page</a>.
 </p>
 <a name="registration"></a><h3>Registration</h3>
 <ol class="top"> 
@@ -14,14 +14,14 @@ Welcome to the ninth annual Montgomery Blair Math Tournament, or MBMT for short!
         The math team sponsors of each school/organization register individual student teams through the website via the <a href="{% url "coaches:register" %}">registration page</a>.
         There is no limit to the number of full teams a school or organization may send.
     </li>
-    <li><b class="red">Division A (Gödel) only: Subject Tests are specifically limited.</b> The goal of this policy is twofold: to make the subjects more competitive and balanced, and to perhaps introduce other topics of math not normally found in the classroom setting.</li>
+    <li><b class="red">Division A (Erdős) only: Subject Tests are specifically limited.</b> The goal of this policy is twofold: to make the subjects more competitive and balanced, and to perhaps introduce other topics of math not normally found in the classroom setting.</li>
     <ol>
         <!-- <li>Each full team of 5 will be required to have at least 2 tests per subject. For example, it is not allowed to have only one student on a team of 5 take the Algebra Subject Test.</li> -->
         <!-- <li>A team of 4 will be required to have at least 1 test per subject, but no more than 3 tests per subject.</li> -->
         <!-- <li>A team of 3 will only be required to have at least 1 test per subject.</li> -->
         <!-- <li>Teams of 1 or 2 have no restrictions; however, refer to rule #4 below for more information on teams of 1 or 2.</li> -->
-        <li>Each Division A (Gödel) team can have no more than 3 tests per subject.</li>
-        <li>Division B (Brahmagupta) teams can select any combination of subject tests.</li>
+        <li>Each Division A (Erdős) team can have no more than 3 tests per subject.</li>
+        <li>Division B (Weierstrass) teams can select any combination of subject tests.</li>
     </ol>
     <li>If there are fewer than 5 students interested in participating, you may register incomplete teams. For an incomplete team’s Team and Guts round scores to be officially considered, incomplete teams must have <b>at least 3 students</b>. Teams with one or two students will be merged into larger teams.</li>
     <li>We <b>do not</b> allow mixed-school or mixed-organization teams. However, we do allow organizations consisting of home-school groups, and community activity groups, to name a few.</li>
@@ -34,7 +34,7 @@ Welcome to the ninth annual Montgomery Blair Math Tournament, or MBMT for short!
     <li><b>The Individual round</b> consists of two tests, each with eight questions and lasting thirty minutes. Individual Tests are on two subjects among <b>Algebra</b>, <b>Geometry</b>, <b>Counting and Probability</b>, and <b>Number Theory</b>.</li> 
     <li><b>The Team round</b> contains fifteen questions for all team members to collaboratively solve in 45 minutes.</li>
     <li><b>The Guts round</b> is an intense but exciting round in which competing teams can see each others’ progress. It is 60 minutes long, is graded live, and requires each team to work together on progressively harder five-problem sets. Each new set is worth more points than the previous set. <b class="red">Different divisions will have different Guts round questions</b>. Note that <b>there are no benefits of turning in the last set early</b>. There are no bonus points for timing. Please also note that <b class="red">the weighting system for the later problems has been tweaked</b> to more accurately reflect difficulty.
-    <li><b>The Fun round</b> is an exciting, new round consisting of several separate mini-events, including puzzles, trivia, and an estimation round.</li>
+    <li><b>The Fun round</b> is an exciting round consisting of several separate mini-events, including puzzles, trivia, and an estimation round. This round is <u>purely for enjoyment</u> and <b>winners will not receive awards (though fun swag can be won during Fun round).</b></li>
 </ol>
 
 <a name="notation"></a><h3>Important Notation</h3>
@@ -75,10 +75,10 @@ Further clarifications on terminology, notation, and acceptable answer forms can
 <a name="awards"></a><h3>Scoring and Awards</h3>
 <ol>
 <li>A student&rsquo;s <strong>overall individual score</strong> is the weighted sum of the two subject tests that they have taken. The <strong>top 5 individuals</strong> in each division will be recognized, and the <strong>top 5 </strong>will receive medals.</li>
-<li><strong>Gödel Division Only:</strong> Students are ranked individually in the four subject tests. The <strong>top 3 individuals</strong> of each subject test are recognized. These scores are calculated through a method that accounts for test item difficulty and normalizes the scores between tests.</li>
+<li><strong>Erdős Division Only:</strong> Students are ranked individually in the four subject tests. The <strong>top 3 individuals</strong> of each subject test are recognized. These scores are calculated through a method that accounts for test item difficulty and normalizes the scores between tests.</li>
 <li>High-placement ties will be broken using tiebreaker rounds. Tiebreaker rounds will be held in the grading room during the Fun Round.</li>
 <li>The <strong>team score</strong> is a weighted sum of the individual, Team Round, and Guts Round scores. The <strong>top 5 teams</strong> in each division will be recognized.</li>
-<li>The highest scoring 6th grade student in the Gödel division will receive the <strong>Young Scholar Award</strong>.</li>
+<li>The highest scoring 6th grade student in the <b>Erdős</b> division will receive the <strong>Young Scholar Award</strong>.</li>
 </ol>
 
 A more detailed guide to the scoring algorithm we use can be found at <a href="{% static "files/Scoring.pdf" %}">the scoring document linked here</a>.
