--- a/coaches/templates/coaches/register.html
+++ b/coaches/templates/coaches/register.html
@@ -12,14 +12,13 @@
 <h2 class="lower">Team Registration</h2>
 {% if competition.can_register %}
 <p>
-    Welcome to MBMT IX, held on {{ competition.date }}!
+    Welcome to MBMT X, held on {{ competition.date }}!
     We highly encourage schools' math team coaches or math resource department chairs to act as sponsors; however, any adult who is willing to supervise the team is fine.
 
     <br /><br />
 
-    Here is the <a href="https://docs.google.com/forms/d/1Zo3dyR_Aayv3xGduzcfdgUhmQexc3vB5C_KppBfHAfk/edit">registration form</a> for this year!
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSccT6tRxtHpCR5Y7Us5l6BsD0PKwjAbBQWWAPzR3rIsDNAynw/viewform?embedded=true" width="100%" height="1000" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
-</p>
+    Here is the <a href="https://docs.google.com/forms/d/e/1FAIpQLSfu8Tg62xWakoTbrH-mklJ8NayFL4_o5giGuTsBlcq4RD-e5A/viewform">registration form</a> for this year!
+<iframe src="https://docs.google.com/forms/d/e/1FAIpQLSfu8Tg62xWakoTbrH-mklJ8NayFL4_o5giGuTsBlcq4RD-e5A/viewform?embedded=true" width="640" height="6218" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe></p>
 <!-- <form name="registration" data-toggle="validator" role="form" method="post"> -->
 <!--     {% crispy form %} -->
 <!--     <div class="button-group bump-down"> -->
