--- a/home/templates/home/about.html
+++ b/home/templates/home/about.html
@@ -35,8 +35,8 @@ This website was developed by <a href="https://singerng.github.io/" target="_bla
 (Github: <a href="https://github.com/singerng" target="_blank">@singerng</a>) and
 <a href="https://noahbkim.com/" target="_blank">Noah Kim '18</a>
 (Github: <a href="https://github.com/noahbkim" target="_blank">@noahbkim</a>).
-It is currently maintained by <a href="https://www.stephenz.tech/" target="_blank">Stephen Zhang '25</a>
-(Github: <a href="https://github.com/szhanggg" target="_blank">@szhanggg</a>).
+It is currently maintained by <a href="https://github.com/zeyuanzhao" target="_blank">Alex Zhao '26</a>
+(Github: <a href="https://github.com/zeyuanzhao" target="_blank">@zeyuanzhao</a>).
 It's written in <a href="https://djangoproject.com">Django</a> and hosted on our school servers.
 The source is on <a href="https://github.com/mbhs/mbmt">Github</a>.
 
